# indico-cli

./: .gitignore  Pipfile  README.md  noxfile.py  pyproject.toml
indico-cli/: cli.py  indico.py  util.py
src/indico_cli/: cli.py  indico.py  util.py
